# cmake-cpp-repro

core/: CMakeLists.txt  foo.c  foo.h
nxp/: CMakeLists.txt  main.c  toolchain.cmake
