cmake_minimum_required(VERSION 3.20)
set(CMAKE_C_STANDARD 99)
set(CMAKE_TOOLCHAIN_FILE "toolchain.cmake")
project(nxp C)
add_subdirectory("../core" core)
set(SOURCES main.c)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} PUBLIC core)
target_include_directories(${PROJECT_NAME} PUBLIC .)
target_link_options(${PROJECT_NAME} PRIVATE -T${CMAKE_CURRENT_LIST_DIR}/linker.ld)
target_link_options(${PROJECT_NAME} PRIVATE -Wl,-Map=${PROJECT_NAME}.map)
set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".elf") 
